<resources>
    <string name="app_name">MOV</string>
    <string name="now_playing">Sedang Tayang</string>
    <string name="now_playing_en">Now Playing</string>
    <string name="on_boarding_one">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="on_boarding_two">Tidak perlu khawatir ketinggalan update film terbaru</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="cashless">Cashless</string>
    <string name="on_boarding_three">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="start">Masuk</string>
    <string name="create_new_account">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="upload_later">Upload Nanti</string>
    <string name="photo">Foto</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="username">Username</string>
    <string name="save_continue">Simpan &amp; Lanjutkan</string>
    <string name="ticket">Tiket</string>
    <string name="gran_turismo">Gran Turismo</string>
    <string name="action_adventure">Action, Adventure</string>
    <string name="movie_synopsis">Gran Turismo diangkat dari kisah nyata menggemparkan dari sebuah regu kuda hitam seorang pemain gim dari kelas pekerja, seorang mantan pebalap mobil yang redup, dan seorang eksekutif olahraga balap yang idealis. Bersama-sama mereka mengambil risiko besar dan berjuang masuk dalam olahraga paling elit di dunia.</string>
    <string name="select_seat">Pilih Kursi</string>
    <string name="screen">Layar</string>
    <string name="occupied">Terisi</string>
    <string name="available">Tersedia</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="details">Detail</string>
    <string name="cinema">Bioskop</string>
    <string name="items">Item</string>
    <string name="seat_c1">Seat C1</string>
    <string name="price">Rp 40.000</string>
    <string name="total_price">Harga Total</string>
    <string name="rp_80_000">Rp 80.000</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="home">Beranda</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="payment_success">Pembelian berhasil, silahkan menikmati film kamu</string>
    <string name="loading">LOADING</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="activate">Klik Untuk Mengaktifkan</string>
    <string name="a1">A1</string>
    <string name="balance">Saldo</string>
    <string name="upcoming">Tayang Mendatang</string>
    <string name="close">Tutup</string>
    <string name="account">Akun</string>
    <string name="next">Lanjutkan</string>
    <string name="skip">Lewati</string>
    <string name="cast">Pemain</string>
    <string name="synopsis">Sinopsis</string>
    <string name="register">Daftar</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="cancel">Batalkan</string>
    <string name="log_out">Keluar</string>
    <string name="save">Simpan</string>
    <string name="information">Informasi</string>
    <string name="active_ticket">Tiket Aktif</string>
    <string name="ticket_history">Riwayat Tiket</string>
    <string name="select_seat_btn">Pilih Kursi (%1$s)</string>
    <string name="max_seat_warning">Hanya dapat memilih 5 kursi dalam 1 pesanan</string>
    <string name="theater_location">Golden Theater Tulungagung</string>
    <string name="theater">Bioskop</string>
    <string name="time">Jam</string>
    <string name="date">Tanggal</string>
    <string name="seat">Kursi</string>
    <string name="scan_qr">Scan QR</string>
    <string name="passcode">Passcode</string>
    <string name="sen">Sen</string>
    <string name="_7">7</string>
    <string name="time_format">10:30</string>
    <string name="su">SU</string>
    <string name="_121_min">121 Min</string>
    <string name="help">Bantuan</string>
    <string name="empty_ticket">Anda belum melakukan pembelian tiket, silahkan melakukan pembelian tiket</string>
    <string name="system_maintenance_warning">Maaf, sedang ada pemeliharaan sistem, silahkan ulangi beberapa saat lagi</string>
    <string name="hello">Halo,  %1$s</string>
    <string name="verify_email">Anda belum melakukan verifikasi email,</string>
    <string name="greeting">Mau nonton apa hari ini?</string>
    <string name="last_name">Nama Belakang (Opsional)</string>
    <string name="first_name">Nama Depan</string>
    <string name="select_date_time">Pilih Tanggal dan Jam Nonton</string>
    <string name="empty_ticket_guest">Anda belum Sign In, silahkan Sign In untuk melakukan pembelian tiket</string>
    <string name="halo_guest_user">Halo, Guest User</string>
    <string name="movie_name">Movie Name</string>
    <string name="order_id">ID Order</string>
    <string name="order_details">Detail Pesanan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="forgot_password">Lupa Kata Sandi ?</string>
    <string name="reset_password">Reset Kata Sandi</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="new_password_confirmation">Konfirmasi Kata Sandi Baru</string>
    <string name="btn_verify_email">Klik untuk mengirim verifikasi email</string>
    <string name="dot">●</string>
</resources>